--- a/docs/iqss_techtalk/talk/talk.Rmd
+++ b/docs/iqss_techtalk/talk/talk.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Opportunity in the reproducibility crisis: Computational tools to improve scientific benefaction"
 subtitle: 
-author: Matthew K. Lau, PhD (Harvard Forest)
+author: \ \ \ Matthew K. Lau, PhD (Harvard Forest)
 output: slidy_presentation
 
 ---
@@ -103,21 +103,6 @@ $$ Synthesis = f(benefaction) $$
 | *Meta-Data*  | *Meta-Data* + *Provenance* | *Provenance* + *Versioning*   | *Versioning* + *Provenance*       | *Lit Prog* + *Versioning*  | 
 
 
-# Tools: Overview
-
-|                 | Dataverse  | Code Ocean  |  Zenodo   | Figshare  | Dryad    | PANGAEA | GitHub & Bitbucket | Supplementary Material |
-| :-------------- | :----:     | :----:      | :----:    | :-------: | :---:    | :-----: | :----------------: | :--------------------: |
-| Meta Data       | Yes        | Yes         |  Yes      | Yes       | Yes      | Yes     | Yes                | Yes                    |
-| Data Hosting    | Yes        | Yes         |  Yes      | Yes       | Yes      | Yes     | Yes                | Yes                    |
-| Code Hosting    | Yes        | Yes         |  Yes      | No        | No       | No      | Yes                | Yes                    |
-| Versioning      | No?        | No?         |  Yes      | No        | No       | No      | Yes                | No                     |
-| Capsules        | No         | Yes         |  No       | No        | No       | No      | No                 | No                     |
-| Assigns DOI     | Yes        | Yes         |  Yes      | Yes       | Yes      | Yes     | No                 | No                     |
-| License         | Flexible   | Flexible    | Flexible  | MIT       | CC0      | CC-BY   | Flexible           | None                   |
-| Cost            | None       | Possible    |  None     | None      | Possible | None    | None               | None                   |
-
-*Adapted from Mislan, Heer & White 2016 Trends in Ecol Evol*
-
 
 # Reality: Common Ground
 
@@ -162,57 +147,71 @@ Goal: Simplify computational reproducibility
 1. Create a data "capsule" with code, data and environment
 2. Increase transparency with "cleaned" code and workspace
 
-# 
 
-![](cise1.png){width=70%}
+# Tools: Encapsulator 
 
-# 
+Goal: Simplify computational reproducibility
 
-![](cise2.png){width=50%}
+1. Capsule = all necessary software and data
+2. Cleaned = organize files, remove non-essential code and re-format
+
+# Tools: Encapsulator 
+
+Basic Usage (current paradigm):
+
+1. Code as usual in your normal environment while recording provenance
+2. Run encapsulator from the console
+3. List desired results
+4. Product = Capsule containing essential code and data with a virtual machine
 
 # What is data provenance?
 
 ![](provw3c.png){width=80%}
 
-# What is data provenance?
 
-![](provEx.png){width=50%}
+# Tools: Encapsulator
 
-# Prov. Huh. What is it good for? 
+Example: Messycode
 
-![](blazing_saddles2.JPG)
+![](encap_messy.png){width=70%}
 
-<!-- However, after almost ten years of being an open-source advocate... -->
-<!-- Ecologists aren't CS majors, they're tree climbing, scub-diving types -->
+# Tools: Encapsulator
 
-# Prov. Huh. What is it good for?
+Example: Messycode
 
-![](rgm.jpg)
+- near stream-of-consciousness coding that follows a train of thought in script development,
+- output to console that is not written to disk,
+- intermediate objects that are abandoned,
+- library and new data calls throughout the script,
+- output written to disk but not used in final documents,
+- code that is not modularized, 
+- code that is syntactically correct but not particularly comprehensible.
 
-<!-- Single-minded software, get the analysis done! -->
+# Tools: Encapsulator
 
-# Prov. Huh. What is it good for?
+Example: Messycode
 
-![](messy1.png){width=100%}
+![](encap_messy.png){width=70%}
 
-# Prov. Huh. What is it good for? 
+# Tools: Encapsulator
 
-![](cise2.png){width=40%} 
+Example: Messycode
 
-# encapsulator(A Kit of Parts): Checking inputs and outputs
+![](encap_clean.png){width=70%}
 
-- *lintR* (Hester 2017)
-- *containR* (Chen 2018)
+# Tools: Encapsulator 
 
-# encapsulator(A Kit of Parts): Code Formatting
+Requirements: Simplify computational reproducibility
 
-- *formatR* (Xie 2017) 
-- *styler* (Muller & Walther 2018)
+1. The environment should present a user interface familiar to
+   scientists.
+2. Encapsulation and use (de-encapsulation) of time capsules must
+require minimal technical expertise.
+3. The installation process itself must also require minimum
+intervention and technical knowledge.
+4. Time capsules, their installation, and re-execution must be
+   platform-independent.
 
-# encapsulator(A Kit of Parts): Code Cleaning 
-
-- *Rclean* (Lau 2018) 
-- *CodeDepends* (Lang et al. 2018)
 
 # encapsulator(A Kit of Parts): Capsule creation
 
@@ -221,6 +220,47 @@ Goal: Simplify computational reproducibility
 - Literate computing notebook (Jupyter)
 - Compressed (Reprozip)
 - Capsule database (Code Ocean)
+
+
+# What is data provenance?
+
+![](provw3c.png){width=80%}
+
+
+# What is data provenance?
+
+![](provEx.png){width=50%}
+
+# Data Provenance and R
+
+![](blazing_saddles2.JPG)
+
+<!-- However, after almost ten years of being an open-source advocate... -->
+<!-- Ecologists aren't CS majors, they're tree climbing, scub-diving types -->
+
+# Data Provenance and R
+
+![](rgm.jpg)
+
+<!-- Single-minded software, get the analysis done! -->
+
+# Data Provenance and R
+
+![](encap_clean.png){width=70%}
+
+# encapsulator(A Kit of Parts): Provenance Details
+
+- inputs
+- outputs
+- transient data objects and their values
+- operations
+- library dependencies
+
+
+# Encapsulator and benefaction
+
+1. Eases and (potentially) improves project archiving
+2. Increases clarity for re-use (others and self)
 
 # Conclusion: The next great challenge is synthesis
 
@@ -261,3 +301,36 @@ Goal: Simplify computational reproducibility
 ![](inst_3.png){width=20%}
 ![](inst_1.png){width=25%}
 ![](inst_4.png){width=15%}
+
+
+# Tools: Overview
+
+|                 | Dataverse  | Code Ocean  |  Zenodo   | Figshare  | Dryad    | PANGAEA | GitHub & Bitbucket | Supplementary Material |
+| :-------------- | :----:     | :----:      | :----:    | :-------: | :---:    | :-----: | :----------------: | :--------------------: |
+| Meta Data       | Yes        | Yes         |  Yes      | Yes       | Yes      | Yes     | Yes                | Yes                    |
+| Data Hosting    | Yes        | Yes         |  Yes      | Yes       | Yes      | Yes     | Yes                | Yes                    |
+| Code Hosting    | Yes        | Yes         |  Yes      | No        | No       | No      | Yes                | Yes                    |
+| Versioning      | No?        | No?         |  Yes      | No        | No       | No      | Yes                | No                     |
+| Capsules        | No         | Yes         |  No       | No        | No       | No      | No                 | No                     |
+| Assigns DOI     | Yes        | Yes         |  Yes      | Yes       | Yes      | Yes     | No                 | No                     |
+| License         | Flexible   | Flexible    | Flexible  | MIT       | CC0      | CC-BY   | Flexible           | None                   |
+| Cost            | None       | Possible    |  None     | None      | Possible | None    | None               | None                   |
+
+*Adapted from Mislan, Heer & White 2016 Trends in Ecol Evol*
+
+
+
+<!-- # encapsulator(A Kit of Parts): Checking inputs and outputs -->
+
+<!-- - *lintR* (Hester 2017) -->
+<!-- - *containR* (Chen 2018) -->
+
+<!-- # encapsulator(A Kit of Parts): Code Formatting -->
+
+<!-- - *formatR* (Xie 2017)  -->
+<!-- - *styler* (Muller & Walther 2018) -->
+
+<!-- # encapsulator(A Kit of Parts): Code Cleaning  -->
+
+<!-- - *Rclean* (Lau 2018)  -->
+<!-- - *CodeDepends* (Lang et al. 2018) -->
